samples/_failures_safe/1761559424_f526ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcd67547.c: In function ‘main’:
./samples/SAFE/__tmp_fcd67547.c:157:17: error: expected declaration or statement at end of input
  157 |                 }
      |                 ^
./samples/SAFE/__tmp_fcd67547.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fcd67547.c:157:17: error: expected declaration or statement at end of input
